fixed bugs with relative URLs
there were some bugs with relative URLs were an extra "/" was
concatenated on. i did not effect the system i just did not look good

--- a/apps/files/files.css
+++ b/apps/files/files.css
@@ -14,6 +14,8 @@
 }
 #fileCons{
 	width: 80%;
+    margin-top: 0px;
+    position: fixed;
 }
 table{
 	width: 100%;
